--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -2,6 +2,7 @@ steps:
 
 # Obter credenciais para acessar repositório de dependências do Maven
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  dir: 'server'
   entrypoint: 'bash'
   args: 
     - '-c'
@@ -11,6 +12,7 @@ steps:
 
 
 - name: 'bash'
+  dir: 'server'
   args:
     - 'chmod'
     - '+x'
@@ -18,12 +20,14 @@ steps:
 
 
 - name: 'maven:3.9-eclipse-temurin-21'
+  dir: 'server'
   entrypoint: './mvnw'
   args: 
     - 'test'
 
 
 - name: maven:3.9-eclipse-temurin-21
+  dir: 'server'
   entrypoint: './mvnw'
   args: 
     - 'package'
@@ -31,6 +35,7 @@ steps:
 
 
 - name: 'gcr.io/cloud-builders/docker'
+  dir: 'server'
   args:
     - 'build'
     - '--platform=linux/amd64'
@@ -40,12 +45,14 @@ steps:
 
 
 - name: 'gcr.io/cloud-builders/docker'
+  dir: 'server'
   args:
     - 'push'
     - 'us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA'
 
   
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  dir: 'server'
   entrypoint: 'gcloud'
   args:
     - 'run'
