--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,37 +8,18 @@ steps:
     - '-c'
     - |
       mkdir -p /root/.m2 && \
-      gcloud secrets versions access latest --secret="maven-settings" > /root/.m2/settings.xml
-
-
-- name: 'bash'
-  dir: 'server'
-  args:
-    - 'chmod'
-    - '+x'
-    - 'mvnw'
-
-
-- name: 'maven:3.9-eclipse-temurin-21'
-  dir: 'server'
-  entrypoint: './mvnw'
-  args: 
-    - 'test'
-
-
-- name: maven:3.9-eclipse-temurin-21
-  dir: 'server'
-  entrypoint: './mvnw'
-  args: 
-    - 'package'
-    - '-DskipTests'
+      gcloud secrets versions access latest --secret="maven-settings" > /workspace/settings.xml
 
 
 - name: 'gcr.io/cloud-builders/docker'
   dir: 'server'
+  env:
+    - 'DOCKER_BUILDKIT=1'
   args:
     - 'build'
     - '--platform=linux/amd64'
+    - '--secret'
+    - 'id=maven-settings,src=/workspace/settings.xml'
     - '-t'
     - 'us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA'
     - '.'
@@ -72,3 +53,6 @@ steps:
 
 images:
   - 'us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA'
+
+options:
+  logging: CLOUD_LOGGING_ONLY
