--- a/server/application/pom.xml
+++ b/server/application/pom.xml
@@ -27,5 +27,11 @@
             <artifactId>domain</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
