add: sonar config

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -16,6 +16,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <spring-boot.version>3.5.3</spring-boot.version>
         <jacoco.version>0.8.13</jacoco.version>
         <mockito.version>5.18.0</mockito.version>
+
+        <!-- SonarQube -->
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.projectKey>luanpozzobon_MoonVs</sonar.projectKey>
+        <sonar.organization>luanpozzobon-11</sonar.organization>
     </properties>
 
     <modules>
@@ -65,6 +70,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
                     <configuration>
                         <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
                     </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>5.1.0.4751</version>
                 </plugin>
             </plugins>
         </pluginManagement>
