--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,6 +11,19 @@ steps:
       gcloud secrets versions access latest --secret="maven-settings" > /workspace/settings.xml
 
 
+- name: 'maven:3.9-eclipse-temurin-21'
+  dir: 'server'
+  entrypoint: 'mvnw'
+  args:
+    - 'clean'
+    - 'verify'
+    - 'sonar:sonar'
+    - '-Dsonar.token=$$SONAR_TOKEN'
+  availableSecrets:
+    secretManager:
+      - versionName: 'projects/$PROJECT_ID/secrets/sonar-token/versions/latest'
+        env: 'SONAR_TOKEN'
+
 - name: 'gcr.io/cloud-builders/docker'
   dir: 'server'
   env:
