--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   dir: 'server'
   entrypoint: 'bash'
-  args: 
+  args:
     - '-c'
     - |
       mkdir -p /root/.m2 && \
@@ -13,16 +13,16 @@ steps:
 
 - name: 'maven:3.9-eclipse-temurin-21'
   dir: 'server'
-  entrypoint: 'mvnw'
+  entrypoint: './mvnw'
   args:
+    - '--settings'
+    - '/workspace/settings.xml'
     - 'clean'
     - 'verify'
     - 'sonar:sonar'
-    - '-Dsonar.token=$$SONAR_TOKEN'
-  availableSecrets:
-    secretManager:
-      - versionName: 'projects/$PROJECT_ID/secrets/sonar-token/versions/latest'
-        env: 'SONAR_TOKEN'
+  secretEnv:
+    - 'SONAR_TOKEN'
+
 
 - name: 'gcr.io/cloud-builders/docker'
   dir: 'server'
@@ -63,6 +63,11 @@ steps:
     - '$PROJECT_ID'
     - '--update-secrets=DB_URL=db-url:latest,DB_USER=db-user:latest,DB_PASSWORD=db-password:latest,JWT_SECRET=jwt-secret:latest'
 
+
+availableSecrets:
+  secretManager:
+    - versionName: 'projects/$PROJECT_ID/secrets/sonar-token/versions/latest'
+  env: 'SONAR_TOKEN'
 
 images:
   - 'us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA'
