--- a/server/pom.xml
+++ b/server/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
     <groupId>lpz</groupId>
     <artifactId>mvs</artifactId>
@@ -18,9 +18,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <mockito.version>5.18.0</mockito.version>
 
         <!-- SonarQube -->
+        <sonar.organization>luanpozzobon</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.projectKey>luanpozzobon_MoonVs</sonar.projectKey>
-        <sonar.organization>luanpozzobon-11</sonar.organization>
+        <sonar.projectKey>luanpozzobon_moonvs</sonar.projectKey>
+        <sonar.token>${env.SONAR_TOKEN}</sonar.token>
     </properties>
 
     <modules>
