--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,57 +20,62 @@ steps:
     - 'clean'
     - 'verify'
     - 'sonar:sonar'
+    - '-Dsonar.pullrequest.key=${_PR_NUMBER}'
+    - '-Dsonar.pullrequest.branch=${_HEAD_BRANCH}'
+    - '-Dsonar.pullrequest.base=${_BASE_BRANCH}'
   secretEnv:
     - 'SONAR_TOKEN'
 
 
 - name: 'gcr.io/cloud-builders/docker'
   dir: 'server'
+  entrypoint: 'bash'
   env:
     - 'DOCKER_BUILDKIT=1'
   args:
-    - 'build'
-    - '--platform=linux/amd64'
-    - '--secret'
-    - 'id=maven-settings,src=/workspace/settings.xml'
-    - '-t'
-    - 'us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA'
-    - '.'
+    - '-c'
+    - |
+      if [ -z "$_PR_NUMBER" ]; then
+        docker build \
+          --platform=linux/amd64 \
+          --secret id=maven-settings,src=/workspace/settings.xml \
+          -t us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA \
+          .;
+      fi
 
 
 - name: 'gcr.io/cloud-builders/docker'
   dir: 'server'
+  entrypoint: 'bash'
   args:
-    - 'push'
-    - 'us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA'
+    - '-c'
+    - |
+      if [ -z "$_PR_NUMBER" ]; then
+        docker push us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA;
+      fi
 
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   dir: 'server'
-  entrypoint: 'gcloud'
+  entrypoint: 'bash'
   args:
-    - 'run'
-    - 'deploy'
-    - 'moonvs'
-    - '--image'
-    - 'us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA'
-    - '--region'
-    - 'us-central1'
-    - '--platform'
-    - 'managed'
-    - '--allow-unauthenticated'
-    - '--project'
-    - '$PROJECT_ID'
-    - '--update-secrets=DB_URL=db-url:latest,DB_USER=db-user:latest,DB_PASSWORD=db-password:latest,JWT_SECRET=jwt-secret:latest'
+    - '-c'
+    - |
+      if [ -z "$_PR_NUMBER" ]; then
+        gcloud run deploy moonvs \
+          --image us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA \
+          --region us-central1 \
+          --platform managed \
+          --allow-unauthenticated \
+          --project $PROJECT_ID \
+          --update-secrets DB_URL=db-url:latest,DB_USER=db-user:latest,DB_PASSWORD=db-password:latest,JWT_SECRET=jwt-secret:latest;
+      fi
 
 
 availableSecrets:
   secretManager:
     - versionName: 'projects/$PROJECT_ID/secrets/sonar-token/versions/latest'
       env: 'SONAR_TOKEN'
-
-images:
-  - 'us-central1-docker.pkg.dev/$PROJECT_ID/moonvs/moonvs-api:$SHORT_SHA'
 
 options:
   logging: CLOUD_LOGGING_ONLY
