--- a/server/infra/pom.xml
+++ b/server/infra/pom.xml
@@ -74,6 +74,12 @@
             <version>2.8.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+
 
         <!-- Test Dependencies -->
         <dependency>
